--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9",
-        "laravel/ui": "^4.5",
-        "spatie/laravel-permission": "^6.7",
+        "laravel/framework": "^11.25",
+        "laravel/tinker": "^2.10",
+        "laravel/ui": "^4.6",
+        "spatie/laravel-permission": "^6.10.1",
         "yajra/laravel-datatables-oracle": "^11.1"
     },
     "require-dev": {
@@ -17,16 +17,19 @@
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.0",
-        "phpunit/phpunit": "^11.0.1",
-        "spatie/laravel-ignition": "^2.4"
+        "nunomaduro/collision": "^8.5",
+        "phpunit/phpunit": "^11.5.2",
+        "spatie/laravel-ignition": "^2.9"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Http/Helpers/GettersHelpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
