--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^11.25",
+        "laravel/framework": "12.1.1.0",
         "laravel/tinker": "^2.10",
         "laravel/ui": "^4.6",
         "spatie/laravel-permission": "^6.10.1",
