--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "11.37.0",
+        "laravel/framework": "11.44.1",
         "laravel/tinker": "^2.10",
         "laravel/ui": "^4.6",
         "spatie/laravel-permission": "^6.10.1",
@@ -19,6 +19,7 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.5",
         "phpunit/phpunit": "^11.5.2",
+        "roave/security-advisories": "dev-latest",
         "spatie/laravel-ignition": "^2.9"
     },
     "autoload": {
