--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -32,12 +32,20 @@ jobs:
           php artisan route:cache
           php artisan view:cache
 
+#      - name: 🔐 Setup SSH Key
+#        run: |
+#          mkdir -p ~/.ssh
+#          echo "${{ secrets.SFTP_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+#          chmod 600 ~/.ssh/id_rsa
+#          ssh-keyscan -p ${{ secrets.SFTP_PORT }} ${{ secrets.SFTP_HOST }} >> ~/.ssh/known_hosts
+
       - name: 🔐 Setup SSH Key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SFTP_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -p ${{ secrets.SFTP_PORT }} ${{ secrets.SFTP_HOST }} >> ~/.ssh/known_hosts
+
 
       - name: 📤 Upload via Rsync
         run: |
