--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -34,10 +34,15 @@ jobs:
 
       - name: 🔐 Setup SSH Key
         run: |
+          if [ -z "${{ secrets.SFTP_PORT }}" ] || [ -z "${{ secrets.SFTP_HOST }}" ]; then
+            echo "❌ Missing SFTP_PORT or SFTP_HOST secret"
+            exit 1
+          fi
+
           mkdir -p ~/.ssh
           echo "${{ secrets.SFTP_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -p 22 ${{ secrets.SFTP_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan -p ${{ secrets.SFTP_PORT }} ${{ secrets.SFTP_HOST }} >> ~/.ssh/known_hosts
 
 #      - name: 🚀 Test SSH Connection
 #        run: |
