--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -23,6 +23,9 @@ jobs:
         run: |
           composer install --no-dev --prefer-dist --no-interaction --optimize-autoloader
 
+      - name: Run Static Analysis
+        run: ./vendor/bin/phpstan --error-format=github
+
       - name: 🧹 Prepare Laravel for Production
         run: |
           php artisan config:clear
@@ -34,7 +37,12 @@ jobs:
 
       - name: 🔐 Setup SSH Key
         run: |
-          if [ -z "${{ secrets.SFTP_PORT }}" ] || [ -z "${{ secrets.SFTP_HOST }}" ]; then
+          if [ -z "${{ secrets.SFTP_PORT }}" ]; then
+            echo "❌ Missing SFTP_PORT or SFTP_HOST secret"
+            exit 1
+          fi
+
+          if [ -z "${{ secrets.SFTP_HOST }}" ]; then
             echo "❌ Missing SFTP_PORT or SFTP_HOST secret"
             exit 1
           fi
