--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.5",
+        "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^11.5.2",
         "roave/security-advisories": "dev-latest",
         "spatie/laravel-ignition": "^2.9"
