--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -23,8 +23,8 @@ jobs:
         run: |
           composer install --no-dev --prefer-dist --no-interaction --optimize-autoloader
 
-      - name: Run Static Analysis
-        run: ./vendor/bin/phpstan --error-format=github
+#      - name: Run Static Analysis
+#        run: ./vendor/bin/phpstan --error-format=github
 
       - name: 🧹 Prepare Laravel for Production
         run: |
