--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -42,7 +42,7 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.SFTP_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -p 22 ${{ secrets.SFTP_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan --p 22 ${{ secrets.SFTP_HOST }} >> ~/.ssh/known_hosts
 
 #      - name: 🚀 Test SSH Connection
 #        run: |
