--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "erag/laravel-pwa": "^1.8",
         "laravel/framework": "11.44.1",
         "laravel/tinker": "^2.10",
         "laravel/ui": "^4.6",
